NFDIV-3476: Fix COAnswers document issue for SwitchToSole event (#3018)
* NFDIV-3439: Move CO related code in relevant block

* NFDIV-3439: Rever previous commit

* NFDIV-3439: Fix SwitchToSole logic and CO letters

* NFDIV-3439: Remove accidental code push

* NFDIV-3439: Fix checkStyle

* NFDIV-3439: Fix unit test

* NFDIV-3476: Remove CO Answers, fix CO Letter for SwitchToSole, Fix unit tests

* NFDIV-3476: Fix unit tests

* NFDIV-3439: Fix app1 CO Applied letter

* NFDIV-3439: Fix integration test

* NFDIV-3476: Fix logic for CO Applied letter

* NFDIV-3476: Fix CO Applied letter

* NFDIV-3476: Fix CO Applied letter

* NFDIV-3439: Fix CO Applied letter

* NFDIV-3439: Fix integration test and CO Applied letter for JS cases

* NFDIV-3439: Fix checkstyleIntegration

---------

Co-authored-by: BWeeks-JusticeGovUK <92433491+BWeeks-JusticeGovUK@users.noreply.github.com>
Co-authored-by: amoriartyMOJ <aaron.moriarty@justice.gov.uk>